--- a/env.template
+++ b/env.template
@@ -1,5 +1,5 @@
 DB_NAME=your_db_name
-USERNAME=your_db_username
-PASSWORD=db_password
-HOST=localhost
-PORT=5432
+DB_USERNAME=your_db_username
+DB_PASSWORD=db_password
+DB_HOST=localhost
+DB_PORT=5432
